turtleart.lessons.turtleart.Main.HouseThree.scala.error
Source:29: error: not found: value x
	setY(x+50)
             ^